# lifeos

./: .dockerignore  .gitignore  .lintstagedrc.mjs  PROJECT_STATUS.md  README.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_users.py  0002_create_entity_types.py  0003_create_entities.py
apps/api/app/: example.py  main.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/platform/: __init__.py
apps/api/app/platform/entities/: models.py
apps/api/app/platform/users/: models.py
apps/api/tests/: test_connectivity.py  test_security.py
apps/web/: Dockerfile  eslint.config.js  package.json  tsconfig.json
design/: README.md
design/decisions/: README.md  TEMPLATE.md
design/sprint-01/: README.md
design/sprint-02/: README.md
design/sprint-03/: README.md
design/sprint-04/: README.md
design/sprint-05/: README.md
docs/architecture/: 00_Engineering_Overview.md  01_System_Architecture.md  02_Database_Architecture.md  03_API_Design.md  04_Backend_Architecture.md  05_Frontend_Architecture.md
docs/decisions/: DEC-001-vehicle-reference-implementation.md  DEC-002-document-entity-consolidation.md  DEC-003-contact-entity-consolidation.md  DEC-004-inventory-item-consolidation.md  DEC-005-knowledge-note-vs-notes-naming.md  DEC-006-reminder-vs-task.md  DEC-007-soft-delete-retention.md  DEC-008-goal-task-separation.md  DEC-009-hybrid-relationship-model.md  DEC-010-mvp-supporting-entities.md  DEC-011-fold-activity-audit-module.md  DEC-012-remove-entity-settings-tab.md  DEC-013-v1-backup-strategy.md  README.md
docs/design/: 00_Design_Handoff.md  01_UX_Decision_Record.md
infra/: .env.example  docker-compose.yml
(+14 files in other folders)
