[project]
name = "api"
version = "0.1.0"
description = "LifeOS backend API"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "ruff==0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true

