[project]
name = "api"
version = "0.1.0"
description = "LifeOS backend API"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.2",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==2.1.0",
    "pytest==9.1.1",
    "ruff==0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

